Broken code. Need to fix Carousel. First image is too large and 3 dots are appearing at the bottom

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,56 @@
+/* Global */
+@import url('https://fonts.googleapis.com/css?family=Lobster|Raleway&display=swap');
+
+.container-fluid {
+    padding: 0;
+    margin: 0;
+}
+.wrap {
+    min-height: 100vh;
+}
+
+/* Nav Section */
+
+.nav li a:hover, .navbar-default{
+    background-color: transparent;
+    
+}
+
+.navbar-default {
+    border-color: transparent;
+}
+
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+    color: #fff;
+    background-color: rgba(17,17,17.5);
+}
+
+.navbar-default .navbar-nav > li > a {
+    color: #fcfcfc;
+    text-shadow: 1px 1px 2px #0a0a0a;
+}
+
+.navbar-default .navbar-nav li a:hover,
+.navbar-default .navbar-nav li a:focus {
+    color: #f8512f;
+    background-color: rgba(17,17,17,.2);
+}
+
+nav.navbar-default {
+    position: absolute;
+    top: 100;
+    right: 0;
+    left: 0;
+    z-index: 20;
+}
+
+.navbar-brand > img {
+    margin-top: -7px;
+}
+
+/* Carousel */
 .carousel {
     margin-bottom: 60px;
 }
@@ -24,4 +77,89 @@
 
 .main_img3 {
     background-image: url("../img/farm-2.jpg");
+}
+
+.main_logo {
+    max-height: 300px;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #f8512f;
+    border-color: transparent;
+}
+
+.btn-primary:hover {
+    background-color: #d34326;
+}
+
+.carousel-caption p {
+    color: #f7f7f7;
+    font-size: 16px;
+}
+
+/* Our Story */
+#ourStory .row {
+    margin-top: 30px
+}
+
+#ourStory h1 {
+    font-family: 'Lobster', cursive;
+    color: #f8512f;
+    font-size: 6em;
+    text-shadow: 1px 1px 5px #0a0a0a;
+}
+
+#ourStory h3{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 2em;
+    margin-top: 0;
+}
+
+#ourStory p {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+}
+
+#storyYear {
+    font-family: 'Playfair Display', serif;
+    font-size: 200px;
+    font-weight: 700;
+    z-index: -1;
+    position: absolute;
+    color: rgba(149,147,147,0.2);   
+}
+
+/* TODO: Fix story year to be mobile friendly using media query */
+
+/* Review */
+#review {
+    background-image: url("../img/food_review.jpg");
+    background-color: cover;
+    background-attachment: fixed;
+}
+
+#review .center {
+    margin: 0 auto;
+    float: none;
+    background-color: rgba(20,20,20,6);
+    padding: 10px;
+    margin-top: 145px;
+    border-radius: 5px;
+}
+
+#review h1 {
+    font-family: 'Lobster', cursive;
+    font-size: 5em;
+    color: #f8512f;
+    text-shadow: 1px 1x 5px #0a0a0a;  
+}
+
+#review p {
+    color: #fff;
+    font-family: 'Raleway', sans-seriff;
+    font-weight: 300;
+    font-size: 2em;
+    text-shadow: 1px 1px 5px #0a0a0a;
 }
